--- a/views/register.html
+++ b/views/register.html
@@ -154,7 +154,7 @@
 
 			    </div>
 					<div>
-						<input type="submit" >
+						<input type="submit" value="Verzenden" >
 			    </div>
 			</form>
 		</div>
